# CodyMaze-Web

./: .gitignore  LICENSE  README.md  docker-compose.custom.yml  docker-compose.yml
src/Web/: Cargo.toml  Dockerfile
src/Web/fakeSrc/: main.rs
src/Web/src/: main.rs
src/Web/static/: ciaone.html  index.html  style.css
src/Web/static/privacy/: index.html
src/Web/static/templates/: position.html
src/Web/templates/: position.html
src/WebPage/: Dockerfile  WebPage.sln
src/WebPage/Pages/: Error.cshtml.cs  Index.cshtml.cs  Privacy.cshtml  Privacy.cshtml.cs
src/WebPage/Pages/Mirabilandia/: Index.cshtml  Index.cshtml.cs  Position.cshtml  Position.cshtml.cs
src/WebPage/Properties/: launchSettings.json
src/WebPage/wwwroot/: apple-app-site-association
src/WebPage/wwwroot/mirabilandia/: index.html
