[package]
name = "codymaze-web"
version = "0.1.1"
authors = ["Lorenz Cuno Klopfenstein"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0.5"
actix-files = "0.1.4"
handlebars = "2.0.1"
serde_json = "1.0"
regex = "1.2.1"
lazy_static = "1.4.0"
